# openrail

./: .clang-format  CMakeLists.txt  README.md
cmake/: thirdparty.cmake
include/: mainwindow.hpp
src/: main.cpp  mainwindow.ui
